[package]
name = "grammar_coding"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitstream-io = "1.5.0"

[build-dependencies]
cbindgen = "0.24.3"

[lib]
name = "grammar_coding"
crate-type = ["staticlib"]
