[package]
name = "grammar_coding"
author = "Etienne Palanga"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitstream-io = "1.5.0" # MIT/Apache 2.0
clap = {version = "3.2.5", features = ["derive", "color"]} # MIT/Apache 2.0
libc = "0.2.126" # MIT/Apache 2.0

[build-dependencies]
cbindgen = "0.24.3" # MPL 2.0

[lib]
name = "grammar_coding"
crate-type = ["staticlib"]
